--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
-./app/google-services.json
+/app/google-services.json
 /google-services.json
 /build
 /captures
